# KohakuBoard

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docker/kohakuboard/: nginx.conf
docs/kohakuboard/: README.md  api.md  architecture.md  getting-started.md  index.md
examples/: README.md  all_features_demo.py  kohakuboard_cifar_training.py  non_blocking_benchmark.py  performance_showcase.py  quick_start.py
src/kohaku-board-ui/: package-lock.json  vite.config.js
src/kohaku-board-ui/src/: components.d.ts  typed-router.d.ts
src/kohaku-board-ui/src/components/: ConfigurableChartCard.vue  HistogramSurfaceMini.vue  HistogramViewer.vue  LinePlot.vue  MultiRunChartView.vue  MultiRunLineChart.vue  RunSelectionList.vue  TableViewer.vue
src/kohaku-board-ui/src/pages/projects/: index.vue
src/kohaku-board-ui/src/pages/projects/[project]/: [id].vue  index.vue
src/kohaku-board-ui/src/utils/: api.js
src/kohakuboard/: README.md  cli.py  config.py  logger.py  main.py
src/kohakuboard/api/: boards.py  projects.py  runs.py  sync.py  sync_models.py  system.py
src/kohakuboard/api/utils/: board_reader.py  board_reader_hybrid.py
src/kohakuboard/auth/: dependencies.py
src/kohakuboard/client/: README.md  board.py  capture.py  sync_client.py  sync_worker.py  workers.py  writer.py
src/kohakuboard/client/storage/: __init__.py  duckdb.py  histogram.py  hybrid.py  lance.py  sqlite.py  sqlite_kv.py
src/kohakuboard/client/types/: kernel_density.py  media_handler.py
src/kohakuboard/inspector/: app.py
src/kohakuboard/inspector/services/: data_service.py  deletion_service.py
src/kohakuboard/inspector/utils/: __init__.py
src/kohakuboard/inspector/views/: board_content.py  board_selector.py  media_view.py  metrics_view.py  sql_view.py
src/kohakuboard/inspector/widgets/: __init__.py  confirm_dialog.py
src/kohakuboard/storage/: __init__.py  base.py  columnar.py  columnar_histogram.py  histogram.py  hybrid.py  lance.py  memory.py  sqlite.py  sqlite_kv.py
src/kohakuboard/utils/: board_reader.py  board_reader_hybrid.py  run_id.py
src/kohakuboard_server/: LICENSE  logger.py
src/kohakuboard_server/api/: boards.py  projects.py  runs.py  sync.py  sync_models.py
